--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   "author": "JollyR0ger",
   "license": "WTFPL",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.17.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
