add public cors

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "JollyR0ger",
   "license": "WTFPL",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "pg": "^8.7.3",
