fix env example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PGHOST='localhost'
-PGUSER=process.env.USER
-PGDATABASE=process.env.USER
-PGPASSWORD=null
+PGUSER=user
+PGDATABASE=db
+PGPASSWORD=password
 PGPORT=5432
