--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,10 @@
 steps:
-- name: node:16.13.0
-  entrypoint: npm
-  args: ["install"]
-- name: node:16.13.0
-  entrypoint: node
-  args: ["server"]
-- name: node:16.13.0
-  entrypoint: npm
-  args: ['run', 'build']
+- name: 'gcr.io/cloud-builders/npm'
+  args: ['install']
+- name: 'gcr.io/cloud-builders/npm'
+  args: ["run", "create-env"]
+  env:
+    - 'MY_ENV_VAR=${_MY_ENV_VAR}'
+- name: "gcr.io/cloud-builders/gcloud"
+  args: ["app", "deploy", "api.yaml", "-v", "$_GAE_VERSION"]
+timeout: "1600s"
