--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,7 +3,7 @@ steps:
   entrypoint: npm
   args: ["install"]
 - name: "gcr.io/cloud-builders/gcloud"
-  args: ["app", "deploy", "api.yaml", "-v", "$_GAE_VERSION"]  
+  args: ["app", "deploy", "api.yaml", "$_GAE_VERSION"]  
 - name: node:16.13.0
   entrypoint: node
   args: ["server"]
